# GDCommunityLauncher

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  vcpkg.json
common/: CMakeLists.txt
common/include/: ClientBase.h  Configuration.h  Connection.h  Date.h  FileBuffer.h  FileData.h  FileReader.h  FileWriter.h  JSONObject.h  Log.h  MD5.h  StringConvert.h  URI.h  UpdateThread.h  Value.h  Version.cmake  md5.hpp
common/src/: Connection.cpp  FileReader.cpp  FileWriter.cpp  StringConvert.cpp  Value.cpp
dll/: CMakeLists.txt
dll/include/: ChatClient.h  ChatConnection.h  Client.h  ClientHandler.h  ClientHandlers.h  DatabaseValues.h  DeathRecap.h  EngineAPI.h  EventManager.h  GameAPI.h  HookManager.h  ItemDatabaseValues.h  ItemLinker.h  Log.h  LuaAPI.h  ServerSync.h  ThreadManager.h  UpdateThread.h  WindowsAPI.h
dll/include/EngineAPI/: Actor.h  Color.h  Connection.h  Engine.h  FileSystem.h  GameInfo.h  Graphics.h  GraphicsAlign.h  GraphicsTexture.h  KeyButtonEvent.h  Lua.h  MouseEvent.h  Object.h  Platform.h  Rect.h  Region.h  Render.h  SaveManager.h  Vector.h  World.h
dll/include/EngineAPI/Input/: KeyButtonEvent.h  MouseEvent.h
dll/include/EngineAPI/UI/: ChatWindow.h  GraphicsAlign.h  Localize.h  StyleManager.h
dll/include/Exports/: ServerAuthExport.h  UpdateDialogExport.h
dll/include/GameAPI/: Attribute.h  CombatManager.h  Dialog.h  Difficulty.h  EndlessDungeon.h  Game.h  GameEngine.h  GameFolder.h  GameTextLine.h  InventoryTab.h  Item.h  ItemReplicaInfo.h  Player.h  Quest.h  Skill.h  TriggerToken.h
dll/res/: CraftingDatabaseValues.rc  DungeonDatabaseValues.rc  ItemDatabaseValues.rc
dll/src/: ChatClient.cpp  ChatConnection.cpp  Client.cpp  ClientHandler.cpp  ClientHooks.cpp  DeathRecap.cpp  EngineAPI.cpp  EventManager.cpp  GameAPI.cpp  HookManager.cpp  ItemLinker.cpp  LuaAPI.cpp  ServerSync.cpp  ThreadManager.cpp  UpdateThread.cpp  main.cpp
dll/src/ClientHandlers/: HandleBestowToken.cpp  HandleCheatCommands.cpp  HandleCombatManager.cpp  HandleConnection.cpp  HandleDirectReadWrite.cpp  HandleDisplayText.cpp  HandleEndlessDungeon.cpp  HandleGameFolder.cpp  HandleGetVersion.cpp  HandleItemCrafting.cpp  HandleItemDescription.cpp  HandleKeyEvent.cpp  HandleLua.cpp  HandleMouseEvent.cpp  HandlePlayerSaves.cpp  HandleRender.cpp  HandleSaveManager.cpp  HandleSaveNewFormatData.cpp  HandleSendChatMessage.cpp  HandleSetMainPlayer.cpp  HandleShutdown.cpp  HandleTransferStash.cpp  HandleWindowsAPI.cpp  HandleWorld.cpp
dll/src/EngineAPI/: Actor.cpp  Color.cpp  Engine.cpp  FileSystem.cpp  GameInfo.cpp  Graphics.cpp  GraphicsTexture.cpp  Lua.cpp  Object.cpp  Platform.cpp  Region.cpp  Render.cpp
dll/src/EngineAPI/UI/: ChatWindow.cpp  Localize.cpp  StyleManager.cpp
dll/src/Exports/: ServerAuthExport.cpp  UpdateDialogExport.cpp
dll/src/GameAPI/: Attribute.cpp  CombatManager.cpp  Dialog.cpp  Difficulty.cpp  EndlessDungeon.cpp  Game.cpp  GameEngine.cpp  GameFolder.cpp  InventoryTab.cpp  Item.cpp  ItemReplicaInfo.cpp  Player.cpp  Quest.cpp  Skill.cpp  TriggerToken.cpp
exe/: CMakeLists.txt
exe/include/: Client.h  Configuration.h  GameLauncher.h  LoginDialog.h  LoginPrompt.h  SelectorDialog.h  ServerAuth.h  UpdateDialog.h
exe/res/: About.txt  LoginDialog.rc  LoginPrompt.rc  SelectorDialog.rc  UpdateDialog.rc
exe/src/: Client.cpp  Configuration.cpp  GameLauncher.cpp  LoginDialog.cpp  SelectorDialog.cpp  ServerAuth.cpp  UpdateDialog.cpp  main.cpp
extractor/: CMakeLists.txt
extractor/include/: ARCExtractor.h  ARZExtractor.h  CraftingDBR.h  CraftingTemplate.h  DBRecord.h  DDSImage.h  ItemDBR.h  TEXImage.h
extractor/src/: ARCExtractor.cpp  ARZExtractor.cpp  CraftingDBR.cpp  CraftingTemplate.cpp  DBRecord.cpp  DDSImage.cpp  Extractor.cpp  ItemDBR.cpp  TEXImage.cpp  main.cpp
game/: CMakeLists.txt
game/include/: Character.h  CraftingDatabase.h  DungeonDatabase.h  Faction.h  GDDataBlock.h  Item.h  ItemContainer.h  ItemDatabase.h  ItemType.h  JSONObject.h  Object.h  Quest.h  SaveFile.h  SharedStash.h  Skill.h  Stash.h  UID.h
game/src/: Character.cpp  CraftingDatabase.cpp  DungeonDatabase.cpp  Faction.cpp  GDDataBlock.cpp  Item.cpp  ItemContainer.cpp  ItemDatabase.cpp  Quest.cpp  SharedStash.cpp  Skill.cpp  Stash.cpp  UID.cpp
printtool/: CMakeLists.txt
printtool/include/: PrintTool.h
printtool/src/: PrintTool.cpp  main.cpp
